test/simple/typeerrors/Examples/RightSection.hs
module RightSection where

test :: [Int]
test = filter (False `eqBool`) [1..10]
